@@ -381,6 +381,7 @@ on_step1_activate                      (GtkMenuItem     *menuitem,
 	clist_refresh(store);
     dbgregs_refresh_window();
 	dbgpclog_refresh_window();
+    dbgmem_refresh_window();
 }
 
 
@@ -393,6 +394,7 @@ on_step_over1_activate                 (GtkMenuItem     *menuitem,
 	clist_refresh(store);
     dbgregs_refresh_window();
 	dbgpclog_refresh_window();
+    dbgmem_refresh_window();
 }
 
 GLADE_CB void
@@ -404,6 +406,7 @@ on_step_out1_activate                 (GtkMenuItem     *menuitem,
 	clist_refresh(store);
     dbgregs_refresh_window();
 	dbgpclog_refresh_window();
+    dbgmem_refresh_window();
 }
 
 
@@ -440,6 +443,7 @@ on_run_to_cursor1_activate             (GtkMenuItem     *menuitem,
 	clist_refresh(store);
     dbgregs_refresh_window();
 	dbgpclog_refresh_window();
+    dbgmem_refresh_window();
 }
 
 
@@ -495,6 +499,7 @@ dbgcode_button6_clicked                     (GtkButton       *button,
     clist_refresh(store);
     dbgregs_refresh_window();
 	dbgpclog_refresh_window();
+    dbgmem_refresh_window();
 }
 
 /***** Popup menu *****/
@@ -721,4 +726,5 @@ on_set_pc_to_selection1_activate       (GtkMenuItem     *menuitem,
     ti68k_register_set_pc(addr);
     dbgcode_refresh_window();
     dbgregs_refresh_window();
+    dbgmem_refresh_window();
 }
